load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

container_image(
    name = "image",
    base = "@flightdeck-e2e//image",
    files = [
        "//images/bazelbuild:create_bazel_cache_rcs.sh",
        "//images/bazelbuild:runner",
        "//hack:coalesce.py",
        "//images:barnacle",
    ],
    symlinks = {
        "/usr/local/bin/barnacle": "/barnacle",
        "/usr/local/bin/runner": "/runner",
        "/usr/local/bin/coalesce.py": "/coalesce.py",
        "/usr/local/bin/create_bazel_cache_rcs.sh": "/create_bazel_cache_rcs.sh",
    },
    visibility = ["//visibility:public"],
    stamp = True,
)

container_bundle(
    name = "flightdeck",
    images = {
        "{STABLE_IMAGE_DOCKER_REPO_INTERNAL}/flightdeck-e2e:{STABLE_IMAGE_DOCKER_TAG}": ":image",
    },
    stamp = True,
)

docker_push(
    name = "push",
    bundle = ":flightdeck",
)
